# BEaTmap

./: .buildinfo  .coveragerc  .gitignore  BET Notebook.ipynb  BETv0.7.py  CONTRIBUTING.md  DUALSURFACEv0.0.py  LICENSE  README.md  advanced_usage.html  altair_plots.py  app.py  app_old.py  basic_usage.html  beatmap notebook example.ipynb  beatmap notebook import data.ipynb  beatmap notebook user import data.ipynb  beatmap.ipynb  codecov.yml  core_BetTest.py  data_Iotest.py  example.py  fepd_etoh.csv  genindex.html  getting_started.html  index.html  installation.html  objects.inv  philic.csv  philic_01.csv  philic_02.csv  philic_n2.csv  phobic.csv  phobic_01.csv  phobic_02.csv  processed_data_export_chec  processed_data_export_iii  processed_data_export_jkj  processed_data_export_jsjd  processed_data_export_test  (+24 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: awaken-stapp.yml  ci-macos.yml  ci-ubuntu.yml  ci-windows.yml  gh-pages.yml  tests.yml  update-copyright.yml
.ipynb_checkpoints/: BET Focused-checkpoint.ipynb  beatmap Notebook-checkpoint.ipynb  beatmap notebook example-checkpoint.ipynb  beatmap notebook import data-checkpoint.ipynb  beatmap notebook sample data copy-checkpoint.ipynb  beatmap notebook sample data-checkpoint.ipynb  beatmap notebook user import data-checkpoint.ipynb  beatmap-checkpoint.ipynb
_sources/: advanced_usage.md.txt  getting_started.rst.txt  index.rst.txt
_sources/modules/: index.rst.txt
_static/: custom.css
app/: 0_💾_⠀Upload_Data.py  app_old.py  keep_app_alive.py  requirements.txt
app/legacy/: requirements.txt  streamlit_app.py
app/legacy/static/: sample_data.py
app/pages/: 1_🧪_⠀BEaTmap_Analysis.py  2_📊_⠀Supplemental_Analysis.py  3_ℹ️_⠀About_BEaTmap.py  4_📚_⠀References.py
app/static/: altair_plots.py  sample_data.py  texts.py  utils.py
beatmap/: BET python outline.txt  __init__.py  bet.py  dataio.py  figures.py  settables.py
beatmap/core/: __init__.py  _bet.py  bet.py
beatmap/io/: __init__.py  _dataio.py  dataio.py  vulcan_chex.csv  vulcan_chex.txt
beatmap/utils/: __init__.py  _utils.py
beatmap/vis/: __init__.py  _figures.py  _settables.py  figures.py  settables.py
docs/: CNAME  Makefile  conf.py  getting_started.rst  make.bat
docs/_build/doctrees/: getting_started.doctree  index.doctree  user_guide.doctree
docs/_build/html/: genindex.html  getting_started.html  index.html  py-modindex.html  search.html
docs/docs/doctrees/: environment.pickle
docs/docs/html/: objects.inv  user_guide.html
docs/modules/: core.rst  utils.rst
docs/source/: basic_usage.md  conf.py  index.rst  installation.md  streamlit.rst  user_guide.rst
docs/source/_static/: custom.css
examples/: BEaTmap_example.ipynb  example.ipynb
modules/: index.html
requirements/: doc.txt  pip.txt  pip_requirements.txt  test_requirements.txt
static/: app.py
tests/unit/: CoreTest.py  IOTest.py  UtilsTest.py  test_core.py  test_io.py  test_utils.py
tests/unit/core/: core_BetTest.py
tests/unit/fixtures/: test.xlsx  test_headers.csv  test_n0.csv  test_ok.csv  test_short.csv  test_strings.csv
tests/unit/io/: BetTest.py  data_Iotest.py  test_headers.csv  test_n0.csv  test_ok.csv  test_short.csv  test_strings.csv
tests/unit/utils/: utils_BetTest.py
webapp/: app.py  stateful.py  texts.py
(+17 files in other folders)
