[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beatmap"
dynamic = ["version"]
description = "A tool for determining the valid P/P0 range in BET isotherms"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Ellsworth Bell", email = "ellsworth.bell@gmail.com" },
    { name = "Amin Sadeghi", email = "amin.sadeghi@live.com" },
    { name = "David Morris", email = "davidrpmorris@gmail.com" },
    { name = "Jeff Gostick", email = "jgostick@uwaterloo.ca" },
]
maintainers = [
  { name = "Amin Sadeghi", email = "amin.sadeghi@live.com" },
  { name = "Jeff Gostick", email = "jgostick@uwaterloo.ca" },
]
keywords = [
    "BET",
    "adsorption",
    "Langmuir isotherm",
    "specific surface area",
    "material characterization",
    "Python",
    "web app",
    "GUI",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "prettytable",
    "scipy",
    "seaborn",
]

[project.urls]
"Homepage" = "https://github.com/PMEAL/beatmap/"
"Bug Tracker" = "https://github.com/PMEAL/beatmap/issues"

[tool.hatch.version]
path = "beatmap/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/beatmap",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
testpaths = [
    "tests",
    "integration"
]
